# Communications_and_Protocols

./: README.md  TESTING.md
pc/: demo_receive.py  demo_send.py  protocol.py  test_protocol.py  test_protocol_hardware.py
pico/: CMakeLists.txt  main.c  main_test.c  protocol.c  protocol.h
